syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package logs;

import "google/protobuf/timestamp.proto";

// The greeting service definition.
service Logs {
  // Sends a greeting
  rpc GetLogs (LogsRequest) returns (LogsReply);
}

// The request message containing the user's name.
message LogsRequest {
	string type = 1;
	google.protobuf.Timestamp timestamp = 2;
	int32 status = 3;
}

message LogEntry {
	int32 id = 1;
	string message = 2;
	google.protobuf.Timestamp timestamp = 3;
}

// The response message containing the greetings.
message LogsReply {
	string message = 1;
	repeated LogEntry logs = 2;
}
